can't get token id and decode access token in this stage

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ Todo:
   ☐ Create get user from localstorage with Redux.  
   - Create Dailog when user try to click like without login.
   - Fix likes api with google auth. (Mondatory).
+  - Create globel state instead one state for each task.
