--- a/client/src/i18n/ar/ar.json
+++ b/client/src/i18n/ar/ar.json
@@ -1,30 +1,40 @@
 {
     "memories":"ميموري",
     "login":"تسجيل الدخول",
-    "logout":"Logout",
+    "logout":"تسجيل الخروج",
+    "lastName":"الاسم الأخير",
+    "language":"اللغات",
     "pleaseLogin":"الرجاء تسجيل الدخول لانشاء ذكرى خاصة بك",
-    "settings":"Settings",
-    "mode":"Mode",
-    "light":"Light",
-    "dark":"dark",
-    "direction":"Direction",
-    "left":"left",
-    "right":"right",
-    "language":"language",
+    "settings":"التفضيلات",
+    "mode":"المظهر",
+    "arabic":"العربية",
+    "alreadyHaveAccount":"لديك حساب ؟ تسجيل الدخول",
+    "light":"فاتح",
+    "dark":"غامق",
+    "drawerDirection":"left",
     "search":"ابحث",
     "search query":"بحث بكلمة",
+    "submit":"تطبيق",
     "searchTag":"بحث بوسم",
-    "createPost":"إنشاء جديد",
-    "editPost":"Edit post",
-    "title":"العنوان",
+    "editPost":"تعديل الذكرى",
+    "english":"English",
+    "email":"البريد الالكتروني",
     "message":"الوصف",
+    "title":"العنوان",
     "tags":"وسم",
-    "chooseFile":"choose File",
-    "chooseFileMsg":"No File chosen",
-    "submit":"submit",
-    "clear":"clear",
-    "comments":"comments",
-    "comment":"comment",
-    "writeComment":"write a comment",
-    "youMightAlso":"you might also likes"
+    "createPost":"إنشاء جديد",
+    "chooseFile":"اختار ملف",
+    "chooseFileMsg":"لم يتم اختيار الملف",
+    "createdBy":"تم إنشائه من :",
+    "createAccount":"إنشاء حساب جديد",
+    "clear":"مسح",
+    "comments":"التعليقات",
+    "comment":"تعليق",
+    "confirmPassword":"تأكيد كلمة السر",
+    "writeComment":"كتابة تعليق",
+    "youMightAlso":"قد يعجبك ايضا : ",
+    "register":"تسجيل",
+    "firstName":"الاسم الأول",
+    "password":"كلمة السر",
+    "update":"تعديل"
 }
