--- a/client/src/i18n/en/en.json
+++ b/client/src/i18n/en/en.json
@@ -1,30 +1,40 @@
 {
     "memories":"Memories",
+    "mode":"Mode",
     "login":"Login",
     "logout":"Logout",
-    "pleaseLogin":"Please Login to create your own memory",
-    "settings":"Settings",
-    "mode":"Mode",
     "light":"Light",
+    "pleaseLogin":"Please Login to create your own memory",
+    "language":"Languages",
+    "arabic":"Arabic",
+    "alreadyHaveAccount":"already have an account? Sign in",
+    "english":"English",
     "dark":"dark",
-    "direction":"Direction",
-    "left":"left",
-    "right":"right",
-    "language":"language",
+    "drawerDirection":"right",
+    "settings":"Settings",
     "search":"search",
     "search query":"search",
     "searchTag":"search tag",
-    "createPost":"create new post",
-    "editPost":"Edit post",
+    "submit":"submit",
     "title":"Title",
     "message":"message",
     "tags":"tags",
+    "createPost":"create new post",
     "chooseFile":"choose File",
     "chooseFileMsg":"No File chosen",
-    "submit":"submit",
+    "createdBy":"Created By:",
+    "createAccount":"Create new Account",
     "clear":"clear",
     "comments":"comments",
     "comment":"comment",
     "writeComment":"write a comment",
-    "youMightAlso":"you might also likes"
+    "youMightAlso":"you might also likes",
+    "register":"Register",
+    "firstName":"First name",
+    "lastName":"Last name",
+    "email":"Email",
+    "editPost":"Edit post",
+    "password":"Passwrod",
+    "confirmPassword":"Confirm Password",
+    "update":"update"
 }
