Finished google login layout and add sentences into translate files

--- a/client/src/i18n/ar/ar.json
+++ b/client/src/i18n/ar/ar.json
@@ -1,6 +1,7 @@
 {
     "memories":"ميموري",
     "login":"تسجيل الدخول",
+    "loginWords":"لديك حساب ؟ ",
     "logout":"تسجيل الخروج",
     "lastName":"الاسم الأخير",
     "language":"اللغات",
@@ -8,7 +9,7 @@
     "settings":"التفضيلات",
     "mode":"المظهر",
     "arabic":"العربية",
-    "alreadyHaveAccount":"لديك حساب ؟ تسجيل الدخول",
+    "alreadyHaveAccount":"تسجيل الدخول",
     "light":"فاتح",
     "dark":"غامق",
     "drawerDirection":"left",
@@ -26,7 +27,8 @@
     "chooseFile":"اختار ملف",
     "chooseFileMsg":"لم يتم اختيار الملف",
     "createdBy":"تم إنشائه من :",
-    "createAccount":"إنشاء حساب جديد",
+    "createAccount":"تسجيل جديد",
+    "createWords":"إنشاء حساب جديد ؟",
     "clear":"مسح",
     "comments":"التعليقات",
     "comment":"تعليق",
