--- a/client/src/i18n/en/en.json
+++ b/client/src/i18n/en/en.json
@@ -2,12 +2,13 @@
     "memories":"Memories",
     "mode":"Mode",
     "login":"Login",
+    "loginWords":"already have an account?",
     "logout":"Logout",
     "light":"Light",
     "pleaseLogin":"Please Login to create your own memory",
     "language":"Languages",
     "arabic":"Arabic",
-    "alreadyHaveAccount":"already have an account? Sign in",
+    "alreadyHaveAccount":" Sign in",
     "english":"English",
     "dark":"dark",
     "drawerDirection":"right",
@@ -23,7 +24,8 @@
     "chooseFile":"choose File",
     "chooseFileMsg":"No File chosen",
     "createdBy":"Created By:",
-    "createAccount":"Create new Account",
+    "createAccount":"Sign Up",
+    "createWords":"Don't have an Account?",
     "clear":"clear",
     "comments":"comments",
     "comment":"comment",
