--- a/client/src/i18n/ar/ar.json
+++ b/client/src/i18n/ar/ar.json
@@ -6,6 +6,8 @@
     "lastName":"الاسم الأخير",
     "language":"اللغات",
     "pleaseLogin":"الرجاء تسجيل الدخول لانشاء ذكرى خاصة بك",
+    "loginComment":"تحتاج تسجيل دخول عشان تكتب تعليق ", 
+    "passwordNotMatch":"كلمة السر غير متطابقة ",
     "settings":"التفضيلات",
     "mode":"المظهر",
     "arabic":"العربية",
